--- a/.github    /workflows  /main.yml
+++ b/.github    /workflows  /main.yml
@@ -5,9 +5,9 @@ name: master - Okteto CI/CD
 on:
   # Triggers the workflow on push or pull request events but only for the master branch
   push:
-    branches: [ master ]
+    branches: [ master,release ]
   pull_request:
-    branches: [ master ]
+    branches: [ master,release ]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
