--- a/.github    /workflows  /main.yml
+++ b/.github    /workflows  /main.yml
@@ -1,76 +1,24 @@
-# adsoft-sito
-name: master - Okteto CI/CD
+name: release CI/CD
 
 # Controls when the action will run. 
 on:
   # Triggers the workflow on push or pull request events but only for the master branch
   push:
-    branches: [ master,release ]
+    branches: [ release ]
   pull_request:
-    branches: [ master,release ]
-
+    branches: [ release ]
+    
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  #test:
-
-    #runs-on: ubuntu-latest
-    #strategy:
-    #  max-parallel: 4
-    #  matrix:
-    #    python-version: [3.8]
-
-    #steps:
-    #- uses: actions/checkout@v3
-    #- name: Set up Python ${{ matrix.python-version }}
-    #  uses: actions/setup-python@v3
-    #  with:
-    #    python-version: ${{ matrix.python-version }}
-    #- name: Install Dependencies
-    #  run: |
-    #    python -m pip install --upgrade pip
-    #    pip install -r requirements.txt
-    #- name: make .env 
-    #  uses: SpicyPizza/create-envfile@v1.3
-    #  with:
-    #    envkey_TEST_SECRET_KEY : ${{ secrets.TEST_SECRET_KEY }}
-    #    envkey_TEST_DATABASE : ${{ secrets.TEST_DATABASE }}
-    #    envkey_TEST_USER : ${{ secrets.TEST_USER }}
-    #    envkey_TEST_PASSWORD : ${{ secrets.TEST_PASSWORD }}
-    #    envkey_TEST_HOST : ${{ secrets.TEST_HOST }}
-    #    envkey_TEST_PORT : ${{ secrets.TEST_PORT }}     
-    #    file_name: .env
-    #    fail_on_empty: false
-    #- name: Run Tests
-    #  run: |
-    #    python manage.py test --settings=settings.ci -v 3 --keepdb
-
-  setup:
-
+  release:
     runs-on: ubuntu-latest
-
+    strategy:
+      max-parallel: 4
+      matrix:
+        python-version: [3.8]
     steps:
-    - uses: actions/checkout@v1
-    - uses: okteto/context@2.7.0
+    - uses: actions/checkout@v3
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v3
       with:
-        token: ${{ secrets.OKTETO_TOKEN }}
-
-    - name: Deploy
-      uses: okteto/pipeline@2.7.0
-      with:
-         name: ApiRestTesina
-         timeout: 5m
-         #variables: "DEV_USER=${{ secrets.DEV_USER }}"
-
-   - uses: okteto/context@2.7.0
-     with:
-       token: ${{ secrets.OKTETO_TOKEN }}
-   - name: Deploy
-     uses: okteto/pipeline@2.7.0
-     with:
-        name: denisags # cambiar por su namespace
-        timeout: 5m
-#    - name: Verify
-#      uses: srt32/uptime@master
-#      with:
-#        url-to-hit: "https://adsoftsito-adsoftsito.cloud.okteto.net/graphql/"
-#        expected-statuses: "200"
+        python-version: ${{ matrix.python-version }}      
