--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # PROD env
-PROD_SECRET_KEY = 'santos' 
+PROD_SECRET_KEY = 'i-love-software-prod' 
 PROD_DATABASE = 'fjzhdghp' 
 PROD_USER = 'fjzhdghp'
 PROD_PASSWORD = 'hIFyrFQJtWTvy0syBuVAi5tJV1lgjTDZ' 
-PROD_HOST = 'jelani.db.elephantsql.com' 
+PROD_HOST = 'postgres://fjzhdghp:hIFyrFQJtWTvy0syBuVAi5tJV1lgjTDZ@horton.db.elephantsql.com/fjzhdghp' 
 PROD_PORT = 5433 
